fix(list-item, stack): stretch dropdown when placed inside a list-item or stack (#8204)
**Related Issue:** #8185

## Summary

- stretch dropdown component in list-item and stack

--- a/packages/calcite-components/src/components/list-item/list-item.scss
+++ b/packages/calcite-components/src/components/list-item/list-item.scss
@@ -146,7 +146,8 @@ td:focus {
 .actions-end {
   ::slotted(calcite-action),
   ::slotted(calcite-action-menu),
-  ::slotted(calcite-handle) {
+  ::slotted(calcite-handle),
+  ::slotted(calcite-dropdown) {
     @apply self-stretch;
 
     color: inherit;
